--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
     align-items: center;
     width: 100%;
     height: 100%;
+    min-height: 100%;
     padding: 0;
     margin: 0;
     background-image: url("img/background.jpg");
@@ -16,7 +17,7 @@ body {
 .parallelogram {
     background-color: purple;
     width: 75%;
-    height: 50%;
+    padding: 2%;
     transform: skew(-20deg);
     text-align: center;
 }
@@ -27,12 +28,6 @@ body {
     color: lime;
     display: inline-block;
 }
-
-/* .photo {
-    width: 100%;
-    height: 25vh;
-    clear: left;
-} */
 
 .photo img {
     width: 13%;
